<resources>
    <!--App strings-->
    <string name="app_name">Udacity Inventory App</string>

    <!--Defaults and other stuff-->
    <string name="default_quantity">0</string>
    <string name="img_inventory">Inventory Image</string>
    <string name="quantity">Quantity: </string>
    <string name="price">Price: </string>
    <string name="supplier_name">Supplier Name: </string>
    <string name="supplier_telephone">Supplier Telephone: </string>

    <!--User actions-->
    <string name="add_dummy_item">Insert Dummy Item</string>
    <string name="delete_items">Delete Item</string>
    <string name="insert_an_item">Insert an Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="unsaved_changes">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="save_item">Save</string>
    <string name="delete_item">Delete</string>
    <string name="delete_all_entries">Delete all Entries</string>
    <string name="remove_dummy_items">Remove Dummy Items</string>

    <!--Notifications to the User-->
    <string name="add_item_failed">Adding an item has failed</string>
    <string name="add_item_sucess">Product added successfully</string>
    <string name="delete_item_failed">Deleting a product has failed</string>
    <string name="delete_item_sucess">Deleting the item was successful</string>
    <string name="empty_view_title_text">Oops… it appears that there is no data!</string>
    <string name="empty_view_subtitle_text">Click the plus button to get you started!!</string>
    <string name="delete_all_confirmation">You are about to delete the entire Database. Would you like to proceed?</string>

    <!--Error strings-->
    <string name="no_name_provided">A product name is required</string>
    <string name="negative_price">No negative prices are allowed</string>
    <string name="negative_quantity">No negative or null quantity values are allowed</string>
    <string name="no_supplier_name">A supplier name must be provided</string>
    <string name="no_supplier_phone">A valid supplier phone must be provided</string>

    <!--Labels-->
    <string name="label_product_name">Product Name:</string>
    <string name="label_product_price">Product Price:</string>
    <string name="label_product_quantity">Product Quantity:</string>
    <string name="label_supplier_name">Supplier Name:</string>
    <string name="label_supplier_telephone">Supplier Phone:</string>

    <!--Hints-->
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_supplier_telephone">Supplier Phone</string>
    <string name="hint_supplier_name">Supplier Name</string>

    <!--Button stings-->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete_confirmation">Are you sure you want to delete the selected item?</string>
    <string name="delete_item_cancel">Cancel</string>
    <string name="update_item_failed">Failed to update Item</string>
    <string name="update_item_success">Item was updated successfully</string>
    <string name="sale">Sale</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="yes">Yes</string>

    <!--Error strings for validation-->
    <string name="fill_out_the_form">Please ensure that all fields have the necessary information</string>
    <string name="fill_out_product_name">Please fill in the Product Name</string>
    <string name="fill_out_product_price">Please enter a valid Product Price</string>
    <string name="fill_out_product_quantity">Please select a valid Product Quantity</string>
    <string name="fill_out_supplier_name">Please provide a valid Supplier Name</string>
    <string name="fill_out_telephone">Please provide a valid Supplier Telephone Number</string>

</resources>
