<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".AddInventoryActivity">

    <!-- Product Name -->
    <LinearLayout
        android:id="@+id/container_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/label_product_name" />

        <!-- Input fields for Product Name -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/txt_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Product Price -->
    <LinearLayout
        android:id="@+id/container_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Price Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/label_product_price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/txt_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

    <!-- Product Quantity -->
    <LinearLayout
        android:id="@+id/container_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/label_product_quantity" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start">

            <!--Increase quantity button-->
            <Button
                android:id="@+id/plus_quantity"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textSize="@dimen/btn_size" />

            <!-- Quantity field -->
            <TextView
                android:id="@+id/txt_product_quantity"
                android:layout_width="@dimen/txt_layout_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/hint_product_quantity"
                android:paddingEnd="@dimen/padding_right"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:paddingStart="@dimen/padding_left"
                android:textSize="@dimen/text_size"
                app:fontFamily="sans-serif-light" />

            <!--Decreate quantity button-->
            <Button
                android:id="@+id/minus_quantity"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textSize="@dimen/btn_size" />

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier Name -->
    <LinearLayout
        android:id="@+id/container_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/label_supplier_name" />

        <!-- Input fields for Supplier Name -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/txt_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier Telephone -->
    <LinearLayout
        android:id="@+id/container_supplier_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/label_supplier_telephone" />

        <!-- Input fields for Supplier Telephone -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="4dp">

            <!-- Supplier Telephone field -->
            <EditText
                android:id="@+id/txt_supplier_telephone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_telephone"
                android:inputType="phone" />

            <Button
                android:id="@+id/btn_contact_supplier"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center"
                android:text="@string/contact_supplier"
                android:textAlignment="center"
                android:textSize="@dimen/btn_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>